# cratedig

./: .gitignore  ARCHITECTURE.md  COMPACT.md  PACKAGING.md  README.dev.md  README.md  UPDATE_RULES.md  config.example.toml  config.toml  minisign.pub  pyproject.toml
.claude/: settings.local.json
.github/workflows/: release.yml
cratedig/: __init__.py  __main__.py  config.py  config_writer.py  dedup.py  files.py  health.py  index.py  paths.py  updater.py
cratedig/als/: parser.py
cratedig/audio/: __init__.py  analyzer.py  category.py  descriptors.py  editor.py  features.py  playback.py  similarity.py
cratedig/convert/: __init__.py  ir.py  options.py  samples.py
cratedig/db/: __init__.py  database.py  models.py  schema.sql
cratedig/gui/: __init__.py  __main__.py  ab_dialog.py  als_explorer.py  convert_dialog.py  download_pane.py  duplicates_dialog.py  health_panel.py  logic.py  main_window.py  metadata_panel.py  platform_files.py  player.py  project_explorer.py  sample_table.py  settings_dialog.py  simpler_pane.py  tag_editor.py  theme.py  toast.py  tree_pane.py  update_check.py  waveform_pane.py  worker.py
cratedig/metadata/: __init__.py  base.py  discogs.py  musicbrainz.py  ranking.py
cratedig/plugins/: __init__.py  scanner.py
cratedig/projects_fmt/: __init__.py  bitwig.py  common.py  detect.py  flstudio.py  logic.py  nuendo.py  protools.py  reaper.py  studioone.py
cratedig/scan/: __init__.py  scanner.py
cratedig/search/: __init__.py  query.py
cratedig/tui/: app.py  (+3 more)
docs/: PLAN_0.5.0.md  PLAN_0.5.2.md  PLAN_0.6.0.md  SETTINGS_DESIGN.md
packaging/: cratedig.icns  cratedig.spec  cratedig_gui.py  make_manifest.py  render_icons.py
projects/: Changes.npr  Surface Tension.bwproject
tests/: test_ab_audition.py  test_als.py  test_als_library_matching.py  test_als_match_actions.py  test_archive.py  test_browser.py  test_category.py  test_config_writer.py  test_convert.py  test_database.py  test_dedup.py  test_descriptors.py  test_download_pane.py  test_duplicates_dialog.py  test_editor.py  test_files.py  test_gui_logic.py  test_health.py  test_health_panel.py  test_make_manifest.py  test_metadata_refresh.py  test_paths.py  test_platform_files.py  test_playback.py  test_playback_gain.py  test_plugin_badges.py  test_plugin_scanner.py  test_project_checker.py  test_project_explorer.py  test_projects_fmt.py  test_projects_fmt_detect.py  test_projects_fmt_flstudio.py  test_projects_fmt_logic.py  test_projects_fmt_protools.py  test_projects_fmt_reaper.py  test_projects_fmt_studioone.py  test_query.py  test_scanner.py  test_search_progress.py  test_settings_dialog.py  (+11 more)
(+355 files in other folders)
